<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorLight">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.myles.testingwaters.HelpActivity">

        <TextView
            style="@style/LargeTextTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_author"/>

        <TextView
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/author_information"/>

        <TextView
            android:padding="16dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/website_link"
            android:autoLink="web"/>

        <TextView
            style="@style/LargeTextTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_information"/>

        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/square_game"
            android:textSize="18sp"/>

        <TextView
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/square_game_description"/>

        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/triangle_game"
            android:textSize="18sp"/>

        <TextView
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/triangle_game_description"/>


        <TextView
            style="@style/LargeTextTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/images_and_resources"/>

        <TextView
            style="@style/sources"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/material_design_link"
            android:autoLink="web"/>

        <TextView
            style="@style/sources"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/android_developer_link"
            android:autoLink="web"/>

        <TextView
            style="@style/sources"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stack_overflow_link"
            android:autoLink="web"/>

        <TextView
            style="@style/sources"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/brian_resources"
            android:autoLink="web"/>

        <TextView
            style="@style/sources"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/testing_waters_icon"
            android:autoLink="web"/>

    </LinearLayout>
</ScrollView>