<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.example.myles.testingwaters.LoginActivity"
    android:background="@color/colorLight">

    <EditText
        android:id="@+id/login_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:digits="qwertzuiopasdfghjklyxcvbnm_-"
        android:hint="@string/first_name" />

    <EditText
        android:id="@+id/login_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:digits="qwertzuiopasdfghjklyxcvbnm_-"
        android:hint="@string/last_name"/>

    <EditText
        android:id="@+id/login_student_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:digits="0123456789"
        android:hint="@string/student_id"/>

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/please_enter_your_password"/>
    
    <Button
        android:id="@+id/sign_in_btn"
        android:layout_marginTop="16dp"
        style="@style/ButtonTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in" />

    <TextView
        android:textColor="@color/failure"
        android:paddingTop="16dp"
        android:id="@+id/warning_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />




</LinearLayout>
