<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_resource"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.myles.testingwaters.ResourceActivity"
    android:background="@color/colorLight">

    <TextView
        android:textSize="16dp"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/material_design_link"
        android:gravity="center"
        android:autoLink="web"
        android:textColor="@color/colorWhite"/>

    <TextView
        android:textSize="16dp"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/android_developer_link"
        android:gravity="center"
        android:autoLink="web"
        android:textColor="@color/colorWhite"/>

    <TextView
        android:textSize="16dp"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stack_overflow_link"
        android:gravity="center"
        android:autoLink="web"
        android:textColor="@color/colorWhite"/>



</LinearLayout>
