<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.myles.testingwaters.GalleryActivity">
    <LinearLayout
        android:id="@+id/activity_about"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorLight">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:paddingLeft="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/the_grand_canyon"
                android:layout_weight="1"/>
            <ImageView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="150dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:paddingLeft="16dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/the_tulum_ruins"/>
            <ImageView
                android:layout_weight="1"
                android:paddingTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="165dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:paddingLeft="16dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yellowstone_park"/>
            <ImageView
                android:layout_weight="1"
                android:paddingTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="165dp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp">

            <TextView
                android:paddingLeft="16dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kokanee_cabin"/>
            <ImageView
                android:layout_weight="1"
                android:paddingTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="165dp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
